# validator

./: .gitignore  AUTHORS  LICENSE  Makefile  Makefile.am  Makefile.orig  README  README.md  autogen.sh  bootstrap  build  build_so  configure.ac
contrib/: .gitignore  Makefile.am  submit-obs-build.sh  validator.pc.in  zvm-validator.spec.tmpl
contrib/jenkins/: jenkins.sh
debian/: changelog  control  libvalidator0.links  rules
native_client/src/: Makefile.am
native_client/src/include/: Makefile.am
native_client/src/shared/: .gitignore  Makefile.am
native_client/src/shared/gio/: Makefile.am  gio.target.mk  gio_lib.target.mk
native_client/src/shared/platform/: Makefile.am  platform.target.mk  platform_lib.target.mk  platform_tests.target.mk
native_client/src/shared/platform/linux/: nacl_clock.c  nacl_semaphore.c
native_client/src/shared/utils/: Makefile.am  utils.target.mk
native_client/src/trusted/: Makefile.am
native_client/src/trusted/cpu_features/: Makefile.am  cpu_features.target.mk
native_client/src/trusted/service_runtime/: Makefile.am
native_client/src/trusted/service_runtime/arch/x86_64/: sel_ldr_x86_64.c
native_client/src/trusted/validator/: Makefile.am  ncfileutils_x86_64.target.mk  validators.target.mk
native_client/src/trusted/validator/x86/: ncval_base_verbose_x86_64.target.mk  ncval_base_x86_64.target.mk
native_client/src/trusted/validator/x86/64/: ncvalidate_verbose_x86_64.target.mk  ncvalidate_x86_64.target.mk
native_client/src/trusted/validator/x86/decoder/: nc_decoder_x86_64.target.mk  nc_opcode_modeling_verbose_x86_64.target.mk  nc_opcode_modeling_x86_64.target.mk  ncdis_decode_tables_x86_64.target.mk
native_client/src/trusted/validator/x86/ncval_reg_sfi/: nc_illegal.c  ncval_reg_sfi_verbose_x86_64.target.mk  ncval_reg_sfi_x86_64.target.mk  ncvalidate_iter.c
native_client/src/trusted/validator/x86/ncval_seg_sfi/: ncdis_seg_sfi_verbose_x86_64.target.mk  ncdis_seg_sfi_x86_64.target.mk  ncval_seg_sfi_x86_64.target.mk
native_client/src/trusted/validator_x86/: Makefile.am  nccopy_x86_64.target.mk  ncdis_util_x86_64.target.mk  ncenuminsts_x86_64.c  ncval.Makefile  ncval_x86_64.target.mk  valzo.target.mk
test/: .gitignore  Makefile.am  build  validate.c
test/dyn_linked/: build_valz  build_valzo  ncstubout.c  ncval.c
