SUBDIRS = cpu_features service_runtime validator_x86 validator

EXTRA_DIST = desc/nacl_desc/base.h \
	interval_multiset/nacl_interval_multiset.h \
	interval_multiset/nacl_interval_range_tree.h \
	nacl_base/nacl_refcount.h \
	simple_service/nacl_simple_ltd_service.h \
	simple_service/nacl_simple_service.h \
	simple_service/nacl_simple_rservice.h \
	threading/nacl_thread_interface.h
